--- a/src/overrides/assets/stylesheets/extra.css
+++ b/src/overrides/assets/stylesheets/extra.css
@@ -26,6 +26,7 @@ a.vy-nav-link {
 }
 
 .vy-section-title {
+    font-weight: bold;
     font-size: 16px;
     border-bottom: 1px solid #e8e8e8;
     padding-bottom: 10px;
